# mem1

./: .gitignore  Cargo.toml  README.md  justfile
.claude/skills/mem1-optimize/: SKILL.md
.context/: progress.md
.cursor/commands/: mem1.optimize.md
.cursor/rules/: mem1-auto-optimize.mdc  specify-rules.mdc
.cursor/skills/mem1-auto-optimize/: SKILL.md
.specify/memory/: constitution.md
evaluation/: Makefile  README.md  WHY_LOW_SCORE.md  evals.py  generate_scores.py  get_llm_score.py  loop_round.sh  mem0_locomo.py  requirements.txt  run_experiments.py  run_one_round.sh  test_ark_model.py  translate_to_zh.py
evaluation/baselines/: mem0_locomo.json
evaluation/dataset/: medium_locomo.json  medium_locomo_zh.json  sample_locomo.json
evaluation/metrics/: llm_judge.py  utils.py
evaluation/sag-bench/: README.md  local_embed_server.py  locomo-run.ts  mem0_metrics.json  sag_metrics.json
evaluation/src/: __init__.py  mem1_add.py  mem1_search.py
mem1-mcp/: Cargo.toml  README.md
mem1-mcp/src/: main.rs  server.rs
mem1-server/: Cargo.toml  README.md  build.rs
mem1-server/mem1_dev.db/: IDENTITY  MANIFEST-000005  OPTIONS-000007
mem1-server/src/: app_state.rs  error.rs  lib.rs  main.rs
mem1-server/src/api/: dto.rs  handlers.rs  middleware.rs  mod.rs
mem1-server/src/memory/: download.rs  embedding.rs  extraction.rs  llm_extract.rs  local_embed.rs  local_qwen3_embed.rs  local_rerank.rs  mmr.rs  mod.rs  model.rs  query_rewrite.rs  rerank.rs  stopwords.rs
mem1-server/src/storage/: db.rs  memory.rs  mod.rs
mem1-server/tests/: integration_storage.rs  storage_test.rs
python/: pyproject.toml
python/examples/: __init__.py  example.py
python/src/mem1/: __init__.py  client.py  memory.py  models.py
python/tests/: test_memory_api.py
specs/001-ai-iter-dev/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-ai-iterative-development/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ai-iterative-development/checklists/: requirements.md
specs/001-ai-iterative-development/contracts/: analyzer-output.md  cli.md
specs/001-surrealdb-rig-tokio-stack/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-surrealdb-rig-tokio-stack/checklists/: requirements.md
specs/001-surrealdb-rig-tokio-stack/contracts/: api-http.md  sdk-python.md
toolchain/: __init__.py  cli.py  config.example.yaml  config.py  requirements.txt
toolchain/runner/: __init__.py  analyze.py  code_version.py  collect.py  run_eval.py
toolchain/store/: __init__.py  models.py  run_store.py
toolchain/tests/: __init__.py  test_one_iteration.py
