[package]
name = "mem1-server"
version = "0.1.0"
edition = "2021"
description = "Local AI memory service (Rust server)"

[features]
default = ["local-embed"]
# In-process ONNX embedding (tract, pure Rust). No native libs, works on macOS.
local-embed = ["dep:tract-onnx", "dep:tokenizers", "dep:ndarray"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
surrealdb = { version = "2", features = ["kv-rocksdb"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
whatlang = "0.18"
stop-words = "0.10"
rig-core = { version = "0.32.0", default-features = false, features = ["reqwest-native-tls"] }
tract-onnx = { version = "0.22.1", optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
