[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem1"
version = "0.1.0"
description = "Python SDK for mem1 AI memory service"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mem1"]
